<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- string name="app_name">CS490 Project ALPHA</string-->
    <string name="app_name">CS490 Project BETA</string>
    <!-- string name="app_name">CS490 Project RELEASE</string-->
    <!-- string name="app_name">CS490 Project FINAL</string-->
    <string name="action_settings">Settings</string>
    <string name="header">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="ReasonPlace">Reason</string>
    <string name="WrongPlace">Wrong answer</string>
    <string name="RightPlace">Right answer</string>
    <string name="QuestPlace">Enter question</string>
    <string name="InputPlace">Test Input</string>
    <string name="OutputPlace">Test Output</string>

    
    <string name="questionType">Type of question</string>
    <string name="questionType1">Multiple Choice</string>
    <string name="questionType2">Programming Question</string>
    <string name="questionType3">True/False</string>
</resources>
