<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/MCTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/MCQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/QuestPlace"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/MCeditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/RightPlace" />

            <EditText
                android:id="@+id/MCeditText2"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ReasonPlace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/MCeditText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/WrongPlace" />

            <EditText
                android:id="@+id/MCeditText4"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ReasonPlace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/MCeditText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/WrongPlace" />

            <EditText
                android:id="@+id/MCeditText6"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ReasonPlace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/MCeditText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/WrongPlace" />

            <EditText
                android:id="@+id/MCeditText8"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ReasonPlace" />
        </LinearLayout>
    </TableLayout>

</RelativeLayout>
